--- a/demo/m03.1-ReadCleanExploreDataset.ipynb
+++ b/demo/m03.1-ReadCleanExploreDataset.ipynb
@@ -765,8 +765,560 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "2a54be22-62c3-4352-a5dd-732805ae4c55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          1970[1975]\n",
+       "4           1970-1972\n",
+       "6          1970[1975]\n",
+       "30      1971[1973]971\n",
+       "35         1971[1973]\n",
+       "40         1971[1973]\n",
+       "44         1971[1973]\n",
+       "49         1971[1973]\n",
+       "56         1972[1973]\n",
+       "61         1972[1973]\n",
+       "65         1972[1973]\n",
+       "68         1972[1973]\n",
+       "73         1972[1973]\n",
+       "75            1972-73\n",
+       "79            1972-73\n",
+       "82            1972-73\n",
+       "96          1973-1974\n",
+       "97         1973, 1974\n",
+       "102    1973, 19741973\n",
+       "105        1973, 1974\n",
+       "108        1973, 1974\n",
+       "112        1973, 1974\n",
+       "115        1973, 1974\n",
+       "126        1974, 1975\n",
+       "131        1974, 1975\n",
+       "134        1974, 1975\n",
+       "137        1974, 1975\n",
+       "139    1974, 19751974\n",
+       "142        1974, 1975\n",
+       "365         1982-1985\n",
+       "374         1982-1985\n",
+       "380         1982-1985\n",
+       "383         1982-1985\n",
+       "387         1982-1985\n",
+       "389         1982-1985\n",
+       "391         1982-1985\n",
+       "Name: Year, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list none numeric year value\n",
+    "automobile_df['Year'].loc[automobile_df['Year'].str.isnumeric() == False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7b900b60-09dc-4b61-9193-6ab0c89656c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# use regex to get year value\n",
+    "extr = automobile_df['Year'].str.extract(r'^(\\d{4})', expand=False)\n",
+    "# replace non numeric year value in dataset\n",
+    "automobile_df['Year'] = pd.to_numeric(extr)\n",
+    "automobile_df['Year'].dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b50c2bda-0431-40f8-8f00-d41c1a380b0e",
+   "metadata": {},
+   "source": [
+    "#### Add an age column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "80278815-2a1c-4e02-bf21-67f63c9f589a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MPG</th>\n",
+       "      <th>Cylinders</th>\n",
+       "      <th>Displacement</th>\n",
+       "      <th>Horsepower</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Acceleration</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>27.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>134</td>\n",
+       "      <td>95</td>\n",
+       "      <td>2560</td>\n",
+       "      <td>14.2</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2265</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>19.4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3735</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>US</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>121</td>\n",
+       "      <td>98</td>\n",
+       "      <td>2945</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318</td>\n",
+       "      <td>210</td>\n",
+       "      <td>4382</td>\n",
+       "      <td>15</td>\n",
+       "      <td>US</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      MPG Cylinders Displacement  Horsepower Weight Acceleration  Origin  Age\n",
+       "265  27.5         4          134          95   2560         14.2   Japan   47\n",
+       "233  26.0         4           97          75   2265         18.2   Japan   48\n",
+       "248  19.4         8          318         140   3735         13.2      US   47\n",
+       "177  22.0         4          121          98   2945         14.5  Europe   50\n",
+       "27   11.0         8          318         210   4382           15      US   55"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replace year by age\n",
+    "automobile_df['Age'] = datetime.datetime.now().year - automobile_df['Year']\n",
+    "\n",
+    "automobile_df.drop(['Year'], axis=1, inplace=True)\n",
+    "\n",
+    "automobile_df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6cbe09a4-e90b-42e3-bcad-02deaf73dea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MPG             float64\n",
+       "Cylinders        object\n",
+       "Displacement     object\n",
+       "Horsepower        int64\n",
+       "Weight           object\n",
+       "Acceleration     object\n",
+       "Origin           object\n",
+       "Age               int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check types we don't want\n",
+    "automobile_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "007ac75b-ae01-4fad-9d5b-56a96af39b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11    -\n",
+       "22    -\n",
+       "32    -\n",
+       "42    -\n",
+       "51    -\n",
+       "58    -\n",
+       "69    -\n",
+       "82    -\n",
+       "89    -\n",
+       "Name: Cylinders, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "automobile_df['Cylinders'].loc[automobile_df['Cylinders'].str.isnumeric() == False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7319c131-580b-4dd7-ac06-71ffd242b937",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MPG             float64\n",
+       "Cylinders         int64\n",
+       "Displacement     object\n",
+       "Horsepower        int64\n",
+       "Weight           object\n",
+       "Acceleration     object\n",
+       "Origin           object\n",
+       "Age               int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# extract all values that are not \"-\" / calculate the average / affect average value to \"-\"\n",
+    "cylinders = automobile_df['Cylinders'].loc[automobile_df['Cylinders'] != '-']\n",
+    "cmean = cylinders.astype(int).mean()\n",
+    "automobile_df['Cylinders'] = automobile_df['Cylinders'].replace('-', cmean).astype(int)\n",
+    "automobile_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2470bc97-af2b-4b30-ac70-40c8e4a89a97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "automobile_df['Displacement'] = pd.to_numeric(automobile_df['Displacement'], errors='coerce')\n",
+    "automobile_df['Weight'] = pd.to_numeric(automobile_df['Weight'], errors='coerce')\n",
+    "automobile_df['Acceleration'] = pd.to_numeric(automobile_df['Acceleration'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8e01ac01-8992-4696-b990-a8bbc6397067",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     US; Detroit, Michigan\n",
+       "3                        US\n",
+       "4                       US]\n",
+       "6     US; Detroit, Michigan\n",
+       "7                        US\n",
+       "8                        US\n",
+       "9                       US]\n",
+       "10                       US\n",
+       "11                       US\n",
+       "12    US; Detroit, Michigan\n",
+       "13                       US\n",
+       "14             Japan; Aichi\n",
+       "15                       US\n",
+       "16                      US]\n",
+       "17                       US\n",
+       "Name: Origin, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "automobile_df['Origin'].head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "77484fd8-3213-4a93-8f2e-edffda1d307c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['US; Detroit, Michigan', 'US', 'US]', 'Japan; Aichi',\n",
+       "       'Europe-Germany', 'Europe', 'Japan; Tokyo', 'Japan; Aichi]',\n",
+       "       'US; Detroit, Michigan]', 'Japan; Tokyo]', 'Japan',\n",
+       "       'Europe Germany'], dtype=object)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "automobile_df['Origin'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "43d3ecac-f73c-4c73-88d3-9849b8a2fc50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['US', 'Japan', 'Europe'], dtype=object)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "automobile_df['Origin'] = np.where(automobile_df['Origin'].str.contains('US'), 'US', automobile_df['Origin'])\n",
+    "automobile_df['Origin'] = np.where(automobile_df['Origin'].str.contains('Japan'), 'Japan', automobile_df['Origin'])\n",
+    "automobile_df['Origin'] = np.where(automobile_df['Origin'].str.contains('Europe'), 'Europe', automobile_df['Origin'])\n",
+    "automobile_df['Origin'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "dd27ab8f-1cd2-4f89-adbd-15e821d85513",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MPG</th>\n",
+       "      <th>Cylinders</th>\n",
+       "      <th>Displacement</th>\n",
+       "      <th>Horsepower</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Acceleration</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>387.000000</td>\n",
+       "      <td>387.000000</td>\n",
+       "      <td>387.000000</td>\n",
+       "      <td>387.000000</td>\n",
+       "      <td>387.000000</td>\n",
+       "      <td>387.000000</td>\n",
+       "      <td>387.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>23.672514</td>\n",
+       "      <td>5.410853</td>\n",
+       "      <td>192.184755</td>\n",
+       "      <td>103.645995</td>\n",
+       "      <td>2965.387597</td>\n",
+       "      <td>15.573643</td>\n",
+       "      <td>48.917313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.736579</td>\n",
+       "      <td>1.667795</td>\n",
+       "      <td>103.703706</td>\n",
+       "      <td>38.128651</td>\n",
+       "      <td>846.332848</td>\n",
+       "      <td>2.746260</td>\n",
+       "      <td>3.668715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>1613.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>43.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>17.600000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>102.500000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>2221.500000</td>\n",
+       "      <td>13.900000</td>\n",
+       "      <td>46.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>23.200000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>146.000000</td>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>2790.000000</td>\n",
+       "      <td>15.500000</td>\n",
+       "      <td>49.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>260.000000</td>\n",
+       "      <td>121.000000</td>\n",
+       "      <td>3589.500000</td>\n",
+       "      <td>17.050000</td>\n",
+       "      <td>52.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>46.600000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>455.000000</td>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>5140.000000</td>\n",
+       "      <td>24.800000</td>\n",
+       "      <td>55.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              MPG   Cylinders  Displacement  Horsepower       Weight  \\\n",
+       "count  387.000000  387.000000    387.000000  387.000000   387.000000   \n",
+       "mean    23.672514    5.410853    192.184755  103.645995  2965.387597   \n",
+       "std      7.736579    1.667795    103.703706   38.128651   846.332848   \n",
+       "min      9.000000    3.000000     68.000000   46.000000  1613.000000   \n",
+       "25%     17.600000    4.000000    102.500000   75.000000  2221.500000   \n",
+       "50%     23.200000    4.000000    146.000000   92.000000  2790.000000   \n",
+       "75%     29.000000    6.000000    260.000000  121.000000  3589.500000   \n",
+       "max     46.600000    8.000000    455.000000  230.000000  5140.000000   \n",
+       "\n",
+       "       Acceleration         Age  \n",
+       "count    387.000000  387.000000  \n",
+       "mean      15.573643   48.917313  \n",
+       "std        2.746260    3.668715  \n",
+       "min        8.000000   43.000000  \n",
+       "25%       13.900000   46.000000  \n",
+       "50%       15.500000   49.000000  \n",
+       "75%       17.050000   52.000000  \n",
+       "max       24.800000   55.000000  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "automobile_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d4c15d5-2b33-460b-84d1-ffa184c8ccbd",
    "metadata": {},
    "outputs": [],
    "source": []
